added buttons and linked pages I think

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <button class = 'about' href = '/about.html'>About Me</button>
+        <button class = 'projects' href = '/projects.html'>My Projects</button>
+        <button class = 'contact' href = '/contact.html'>Contact Me</button>
+    </nav>
     
 </body>
+<footer>
+    <nav>
+        <button class = 'contact' href = '/contact.html'>Contact Me</button>
+    </nav>
+</footer>
 </html>
