linked CSS and updated buttons

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
+    <link rel ='stylesheet' href='style/index.css'>
     <title>Document</title>
 </head>
+
+<header>
+    <button class = 'home' href = '/index.html'>Home</button>
+    <button class = 'about' href = '/about.html'>About Me</button>
+    <button class = 'projects' href = '/projects.html'>My Projects</button>            
+            
+</header>
+
 <body>
     <h1> CONTACT </h1>
     <p>I don't have good contacts yet.</p>
