--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel ='stylesheet' href='style/index.css'>
     <title>Document</title>
 </head>
+
+<header>
+    <button class = 'home' href = '/index.html'>Home</button>
+            <button class = 'about' href = '/about.html'>About Me</button>
+            <button class = 'contact' href = '/contact.html'>Contact Me</button>
+</header>
+
 <body>
     <h1> PROJECTS </h1>
     <p>No projects I would like to share yet.</p>
