added colors. added pictures to home page.

--- a/about.html
+++ b/about.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ='stylesheet' href='style/index.css'>
-    <title>Document</title>
+    <title>About</title>
 </head>
+
 <header>
-    <body>
+    <h1> ABOUT </h1>
         <nav>
-            <button class = 'home' href = '/index.html'>Home</button>
-            <button class = 'projects' href = '/projects.html'>My Projects</button>
-            <button class = 'contact' href = '/contact.html'>Contact Me</button>
+            <button window.location.href = 'index.html'>Home</button>
+            <button window.location.href = 'projects.html'>My Projects</button>
+            <button window.location.href = 'contact.html'>Contact Me</button>
         </nav>
 </header>
+
 <body>
-    <h1> ABOUT </h1>
+    
     <p>I don't know what to put here yet. I'm pretty boring.</p>
 </body>
 </html>
