--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
     <link rel ='stylesheet' href='style/index.css'>
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 
 <header>
-    <button class = 'home' href = '/index.html'>Home</button>
-    <button class = 'about' href = '/about.html'>About Me</button>
-    <button class = 'projects' href = '/projects.html'>My Projects</button>            
-            
+    <nav>
+    <button window.location.href = 'index.html'>Home</button>
+    <button window.location.href = 'about.html'>About Me</button>
+    <button window.location.href = 'projects.html'>My Projects</button>            
+  </nav>          
 </header>
 
 <body>
