--- a/projects.html
+++ b/projects.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ='stylesheet' href='style/index.css'>
-    <title>Document</title>
+    <title>Projects</title>
 </head>
 
 <header>
-    <button class = 'home' href = '/index.html'>Home</button>
-            <button class = 'about' href = '/about.html'>About Me</button>
-            <button class = 'contact' href = '/contact.html'>Contact Me</button>
+    <nav>
+    <button window.location.href = 'index.html'>Home</button>
+    <button window.location.href = 'about.html'>About Me</button>
+    <button window.location.href = 'contact.html'>Contact Me</button>
+    </nav>
 </header>
 
 <body>
