--- a/about.html
+++ b/about.html
@@ -8,11 +8,10 @@
 </head>
 
 <header>
-    <h1> ABOUT </h1>
         <nav>
-            <button window.location.href = 'index.html'>Home</button>
-            <button window.location.href = 'projects.html'>My Projects</button>
-            <button window.location.href = 'contact.html'>Contact Me</button>
+            <button onclick = window.location.href = 'index.html'>Home</button>
+            <button onclick = window.location.href = 'projects.html'>My Projects</button>
+            <button onclick = window.location.href = 'contact.html'>Contact Me</button>
         </nav>
 </header>
 
