--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
 <header>
     <h1> CONTACT </h1>
     <nav>
-    <button window.location.href = 'index.html'>Home</button>
-    <button window.location.href = 'about.html'>About Me</button>
-    <button window.location.href = 'projects.html'>My Projects</button>            
+    <button onclick = "window.location.href = 'index.html'">Home</button>
+    <button onclick = "window.location.href = 'about.html'">About Me</button>
+    <button onclick = "window.location.href = 'projects.html'">My Projects</button>            
   </nav>          
 </header>
 
