--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
 
 <header>
         <nav>
-            <button onclick = window.location.href = 'index.html'>Home</button>
-            <button onclick = window.location.href = 'projects.html'>My Projects</button>
-            <button onclick = window.location.href = 'contact.html'>Contact Me</button>
+            <button onclick = "window.location.href = 'index.html'">Home</button>
+            <button onclick = "window.location.href = 'projects.html'">My Projects</button>
+            <button onclick = "window.location.href = 'contact.html'">Contact Me</button>
         </nav>
 </header>
 
