--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <header>
     <h1>Veronica Faber</h1>
     <nav>
-        <button onclick=window.location.href = 'index.html'>Home</button>
-        <button onclick=window.location.href = 'about.html'>About Me</button>
-        <button onclick=window.location.href = 'projects.html'>My Projects</button>
-        <button onclick=window.location.href = 'contact.html'>Contact Me</button>
+        <button onclick= "window.location.href = 'index.html'">Home</button>
+        <button onclick="window.location.href = 'about.html'">About Me</button>
+        <button onclick="window.location.href = 'projects.html'">My Projects</button>
+        <button onclick="window.location.href = 'contact.html'">Contact Me</button>
     </nav>
 </header>
 </div>
