--- a/projects.html
+++ b/projects.html
@@ -8,15 +8,16 @@
 </head>
 
 <header>
+    <h1> PROJECTS </h1>
+   
     <nav>
-    <button window.location.href = 'index.html'>Home</button>
-    <button window.location.href = 'about.html'>About Me</button>
-    <button window.location.href = 'contact.html'>Contact Me</button>
+    <button onclick = "window.location.href = 'index.html'">Home</button>
+    <button onclick = "window.location.href = 'about.html'">About Me</button>
+    <button onclick = "window.location.href = 'contact.html'">Contact Me</button>
     </nav>
 </header>
 
 <body>
-    <h1> PROJECTS </h1>
     <p>No projects I would like to share yet.</p>
 </body>
 </html>
