added and updated fonts

--- a/about.html
+++ b/about.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ='stylesheet' href='style/index.css'>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <title>About</title>
 </head>
 
 <header>
+    <h1>About</h1>
         <nav>
             <button onclick = "window.location.href = 'index.html'">Home</button>
             <button onclick = "window.location.href = 'projects.html'">My Projects</button>
