--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
     <link rel ='stylesheet' href='style/index.css'>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
     <title>Contact</title>
 </head>
 
 <header>
-    <h1> CONTACT </h1>
+    <h1> Contact </h1>
     <nav>
     <button onclick = "window.location.href = 'index.html'">Home</button>
     <button onclick = "window.location.href = 'about.html'">About Me</button>
