--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ='stylesheet' href='style/index.css'>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
     <title>Projects</title>
 </head>
 
 <header>
-    <h1> PROJECTS </h1>
+    <h1> Projects </h1>
    
     <nav>
     <button onclick = "window.location.href = 'index.html'">Home</button>
