--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ='stylesheet' href='style/index.css'>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Satisfy&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 <div class='header'>
@@ -15,18 +17,15 @@
         <button onclick="window.location.href = 'projects.html'">My Projects</button>
         <button onclick="window.location.href = 'contact.html'">Contact Me</button>
     </nav>
+
+    <img class="main" src="https://picsum.photos/400/200" alt="random text">
 </header>
 </div>
 
 <body>
     <div class= 'container'>
-        <img src = 'https://picsum.photos/200'>
-        <img src = 'https://picsum.photos/200'>
-        <img src = 'https://picsum.photos/200'>
-        <img src = 'https://picsum.photos/200'>
-        <img src = 'https://picsum.photos/200'>
-        <img src = 'https://picsum.photos/200'>
-        <img src = 'https://picsum.photos/200'>
+        <img src = 'https://picsum.photos/200' alt = 'Look at this awesome thing I made.'>
+        <img src = 'https://picsum.photos/200' alt = 'Look at this awesome thing I made.'>
     </div>
    
     
