--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         <button onclick="window.location.href = 'contact.html'">Contact Me</button>
     </nav>
 
-    <img class="main" src="https://picsum.photos/400/200" alt="random text">
+    <img class="main" src="https://picsum.photos/600/400" alt="random text">
 </header>
 </div>
 
 <body>
     <div class= 'container'>
+        <img src = 'https://picsum.photos/200' alt = 'Look at this awesome thing I made.'>
+        <img src = 'https://picsum.photos/200' alt = 'Look at this awesome thing I made.'>
         <img src = 'https://picsum.photos/200' alt = 'Look at this awesome thing I made.'>
         <img src = 'https://picsum.photos/200' alt = 'Look at this awesome thing I made.'>
     </div>
