--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
     <link rel ='stylesheet' href='style/index.css'>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Satisfy&display=swap" rel="stylesheet">
     <title>Contact</title>
 </head>
 
